# pypsa-validator

./: .pre-commit-config.yaml  action.yml  pyproject.toml
.github/workflows/: publish-reporter-image.yml
docker/reporter/: Dockerfile
reporter/: __main__.py  publish.py
reporter/components/: footer.py  general.py  utils.py
reporter/meta/: config.py  paths.py  repo.py
