[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name="reporter"
version="0.1.0"
description = "Create PyPSA validation reports"
authors = ["Lukas Trippe <lkstrp@pm.me>"]


[tool.poetry.dependencies]
python = "^3.12"
# Add your specific dependencies here:
requests = "^2.32.3"
numpy = "^2.2.1"
openpyxl = "^3.1.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
GitPython = "^3.1.44"
python-gitlab = "^5.3.1"
pyyaml = "^6.0.2"
# Add more as needed...


# Formatter and linter settings
[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    'F',   # pyflakes
    'E',   # pycodestyle: Error
    'W',   # pycodestyle: Warning
    'I',   # isort
    'D',   # pydocstyle
    'UP',  # pyupgrade
    'TID', # flake8-tidy-imports
    'NPY', # numpy
    'RUF013', # ruff
]
ignore = ['D203', 'D212', 'D400', 'ANN101', 'ANN204', 'PD901']

[tool.ruff.lint.mccabe]
max-complexity = 20
